--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -24,7 +24,7 @@
             <div id="errorMessage" class="error-message"></div>
         </form>
         <div class="register-link">
-            Don't have an account? <a href="/register">Register here</a>
+            Don't have an account? <a href="/register"><u>Register here</u></a>
         </div>
     </div>
     
