--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -39,7 +39,7 @@
             <div id="errorMessage" class="error-message"></div>
         </form>
         <div class="login-link">
-            Already have an account? <a href="/login">Login here</a>
+            Already have an account? <a href="/login"><u>Login here</u></a>
         </div>
     </div>
     
