--- a/frontend/static/css/movie-details.css
+++ b/frontend/static/css/movie-details.css
@@ -28,7 +28,7 @@ body {
     flex: 1.5;
     min-width: 300px;
     padding: 30px;
-    background: linear-gradient(135deg, #ffffff, #f0f0f0);
+    background: #F6F7EB;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -57,7 +57,7 @@ body {
 
 .trivia {
     padding: 30px;
-    background: linear-gradient(135deg, #ffffff, #f0f0f0);
+    background: #F6F7EB;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
@@ -67,42 +67,44 @@ body {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.trivia button {
+.trivia-button {
     margin: 5px;
     padding: 10px 20px;
     font-size: 1em;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    background: linear-gradient(135deg, #ff6a5f, #ff4a3f);
+    background: #7e4d4f;
     color: white;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.trivia button:hover {
-    background: linear-gradient(135deg, #ff4a3f, #ff2a1f);
+.trivia-button:hover {
+    background: #453636;
     transform: scale(1.05);
 }
 
-.trivia button:disabled {
+.trivia-button:disabled {
     cursor: default;
     opacity: 0.7;
 }
 
 /* Aggiungi questa parte al tuo CSS */
 .streaming-button {
-    background-color: orange;
+    background-color: #7e4d4f;
     color: white;
-    padding: 10px 20px;
-    border-radius: 20px;
+    padding: 10px 20px; 
+    border: none;
+    border-radius: 10px;
     cursor: pointer;
+    font-size: 16px;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .streaming-button:hover {
     transform: scale(1.05);
     /* Ingrandisce il bottone */
-    background-color: #d35400;
+    background-color: #453636;
     /* Scurisce il bottone */
 }
 
